remove rest proxy code and move shared test to annotation-processor-test module