@@ -47,7 +47,8 @@
       --add-exports io.clientcore.core/io.clientcore.core.implementation.http.serializer=ALL-UNNAMED
       --add-exports io.clientcore.core/io.clientcore.core.implementation.utils=ALL-UNNAMED
 
-      --add-opens io.clientcore.http.okhttp3/io.clientcore.http.okhttp3=ALL-UNNAMED
+      --add-exports io.clientcore.core/io.clientcore.core.shared=ALL-UNNAMED
+      --add-opens io.clientcore.core/io.clientcore.core.shared=ALL-UNNAMED
     </javaModulesSurefireArgLine>
   </properties>
 
@@ -56,11 +57,6 @@
       <groupId>io.clientcore</groupId>
       <artifactId>core</artifactId>
       <version>1.0.0-beta.8</version> <!-- {x-version-update;unreleased_io.clientcore:core;dependency} -->
-    </dependency>
-    <dependency>
-      <groupId>io.clientcore</groupId>
-      <artifactId>http-okhttp3</artifactId>
-      <version>1.0.0-beta.3</version> <!-- {x-version-update;io.clientcore:http-okhttp3;current} -->
     </dependency>
 
     <!-- Test dependencies -->
@@ -99,6 +95,12 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
       <version>5.11.2</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-params;external_dependency} -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.conscrypt</groupId>
+      <artifactId>conscrypt-openjdk-uber</artifactId>
+      <version>2.5.2</version> <!-- {x-version-update;org.conscrypt:conscrypt-openjdk-uber;external_dependency} -->
       <scope>test</scope>
     </dependency>
   </dependencies>
